crates/bitnet-inference/tests/snapshots/snapshot_wave34__w34_finish_reason_variants_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave34.rs
expression: debug
---
[
    "MaxTokens",
    "StopSequence",
    "EosToken",
    "Error(\"timeout\")",
]
