crates/bitnet-inference/tests/snapshots/snapshot_wave34__w34_gen_budget_unlimited.snap
---
source: crates/bitnet-inference/tests/snapshot_wave34.rs
expression: b
---
GenerationBudget {
    max_tokens: 18446744073709551615,
    max_time: None,
    max_memory_bytes: None,
}
