crates/bitnet-inference/tests/snapshots/snapshot_wave34__w34_gen_budget_with_limits.snap
---
source: crates/bitnet-inference/tests/snapshot_wave34.rs
expression: b
---
GenerationBudget {
    max_tokens: 128,
    max_time: Some(
        30s,
    ),
    max_memory_bytes: Some(
        1073741824,
    ),
}
