crates/bitnet-inference/tests/snapshots/snapshot_wave34__w34_gen_config_with_stops_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave34.rs
expression: cfg
---
GenerationConfig {
    max_new_tokens: 8,
    temperature: 0.0,
    top_k: 1,
    top_p: 1.0,
    repetition_penalty: 1.0,
    stop_sequences: [
        "</s>",
        "\n\nQ:",
    ],
    stop_token_ids: [
        128009,
    ],
    stop_string_window: 64,
    seed: Some(
        42,
    ),
    skip_special_tokens: true,
    eos_token_id: Some(
        2,
    ),
    logits_tap_steps: 0,
    logits_topk: 10,
    logits_cb: false,
    add_bos: false,
}
