crates/bitnet-inference/tests/snapshots/snapshot_wave34__w34_gen_sample_config_default.snap
---
source: crates/bitnet-inference/tests/snapshot_wave34.rs
expression: cfg
---
SamplingConfig {
    temperature: 1.0,
    top_k: Some(
        50,
    ),
    top_p: Some(
        0.9,
    ),
    repetition_penalty: 1.1,
    do_sample: true,
}
